# DemonEdge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
app/: app_state.py  command_palette.py  detached_window.py  layout_manager.py  login_window.py  main_window.py  shortcuts_dialog.py  theme.py  widget_registry.py
broker/: angel_broker.py  base_broker.py  broker_manager.py  instrument_master.py
config/: settings.example.yaml
docs/: architecture.md  broker_api.md  chart_widget.md  instrument_master.md  login_flow.md  market_feed.md  option_chain_widget.md  order_entry_widget.md  positions_widget.md  widget_guide.md
feed/: base_feed.py  feed_manager.py  feed_models.py  market_feed.py  market_feed_signals.py
models/: instrument.py  order.py  position.py  tick.py
tests/: test_feed_manual.py  test_margin_manual.py
utils/: config.py  logger.py
widgets/: base_widget.py
widgets/chart/: chart_data_manager.py  chart_view.py  chart_widget.py  ohlc_item.py  timeframe.py  volume_item.py
widgets/feed_status/: feed_status_widget.py
widgets/log_viewer/: __init__.py  log_viewer_widget.py  qt_log_handler.py
widgets/market_depth/: __init__.py  market_depth_widget.py
widgets/option_chain/: __init__.py  column_selector_dialog.py  iv_calculator.py  option_chain_builder.py  option_chain_model.py  option_chain_row.py  option_chain_widget.py
widgets/order_entry/: order_confirmation_dialog.py  order_entry_widget.py  order_form.py  order_notification_popup.py
widgets/positions/: pnl_summary.py  positions_model.py  (+2 more)
(+6 files in other folders)
